[package]
name = "key_value_store_ssd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.5.1", features = ["derive"] }
glob = "0.3.1"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.4.0", features = ["full"] }
futures = "0.3"
